// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html-entities.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>Some escaped characters: &lt; &gt; &amp;</p>
=====================================output=====================================
<p>Some escaped characters: &lt; &gt; &amp;</p>
================================================================================
`;

exports[`mustache.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div title="foo \\{{"> \\{{ </div>
<div class=" bar \\{{">\\{{</div>

=====================================output=====================================
<div title="foo \\{{">\\{{</div>
<div class="bar \\{{">\\{{</div>
================================================================================
`;
